DIS-1636: Prevent nested anchor tags by applying the placard "Link" field only to the placard image instead of wrapping the entire placard; update `.placard-body` styles to use `font-weight: normal` so WYSIWYG editor formatting is preserved.

--- a/code/web/interface/themes/responsive/css/layout.less
+++ b/code/web/interface/themes/responsive/css/layout.less
@@ -448,7 +448,7 @@ ul.account-submenu{
   margin: 5px;
 }
 
-a.placard-link{
+a.placard-image-link{
   text-decoration: none;
 }
 
@@ -460,7 +460,7 @@ a.placard-link{
 }
 
 .placard-body{
-  font-weight: bold;
+  font-weight: normal;
 }
 
 .table-sticky{
